[project]
name = "shashidivs-devicebridge-perftest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "influxdb>=5.3.2",
    "pandas>=2.3.0",
    "prometheus-client>=0.22.1",
    "psutil>=7.0.0",
    "requests>=2.32.4",
]
